fixed alignment of logout button arrow and fixed border-bottom to be visible in dark and light theme

--- a/src/components/ProfileDropdown/profileDropdown.scss
+++ b/src/components/ProfileDropdown/profileDropdown.scss
@@ -2,7 +2,7 @@
   .bynar-profile-info-wrapper {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid var(--cds-border-subtle);
+    border-bottom: 1px solid var(--cds-text-02,#cacaca);
     padding: 0.5rem 1rem;
 
     >h4 {
